--- a/style.css
+++ b/style.css
@@ -14,21 +14,36 @@ h1{
 }
     span{
         font-family: 'Kalam', cursive;
+        color: rgb(197, 50, 5);
     }
+    .experience-item{
+        width: 40%;
+        margin: 5%;
+        padding: 10px;
+        box-shadow: 10px 20px 10px rgb(207, 216, 233);
+    }
+    
     h5{
         font-family: 'Josefin Slab', serif;
     }
-    section{
+    .flexible-container{
         display: flex;
     }
     .half-width{
         width: 50%;
         padding-left: 10%;
+        
     }
     .half-width img{
         width: 50%;
         padding-left: 0%;
     }
+    .dream-big{
+        background-image: url(images/dream-bg.png);
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    
     .link-button{
         text-decoration: none;
         background-image: linear-gradient(#f54905,#f505e9);
@@ -37,11 +52,28 @@ h1{
         padding: 10px;
         border-radius: 5px;
     }
+    #hero-learner{
+        border-left: 5px solid;
+        border-image: linear-gradient(#f63c3c, #f704baf1) 30;
+        border-image-slice: 1;
+    }
+    #developer{
+        border-left: 5px solid;
+        border-image: linear-gradient(#f63c3c, #f704baf1) 30;
+        border-image-slice: 1;
+    }
     .top-banner{
         background-image: url(images/top-banner.png);
         background-repeat: no-repeat;
-    
+    }
+    .experience-area{
+        background-image: url(images/exp-bg.png);
+        background-repeat: no-repeat;
+        
     }
     body{
         margin: 0;
+    }
+    footer p {
+        text-align: center;
     }
