--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ h1{
         box-shadow: 10px 20px 10px rgb(207, 216, 233);
     }
     
-    h5{
-        font-family: 'Josefin Slab', serif;
+    h3{
+        font-family: 'Inconsolata', monospace;
     }
     .flexible-container{
         display: flex;
